infrastructure/observability/deployment/k8s/stages/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: observability.scaibu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: observability-service
            port:
              number: 80
